--- a/agent/deploy.yaml
+++ b/agent/deploy.yaml
@@ -16,4 +16,20 @@ spec:
         - name: client
           image: fabiocalt/agent:latest
           imagePullPolicy: Always
+          ports:
+            - containerPort: 5000
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: prometheus-agent-service
+spec:
+  selector:
+    app: prometheus-agent
+  type: NodePort
+  ports:
+    - protocol: TCP
+      port: 80           # service port
+      targetPort: 5000   # container port
+      nodePort: 30080    # fixed external port on each node
 
