--- a/controller/Dockerfile
+++ b/controller/Dockerfile
@@ -3,7 +3,7 @@ FROM python:3.11-slim
 WORKDIR /app
 
 RUN pip install requests
-RUN pip install nats-py
+RUN pip install aio-pika 
 
 COPY controller.py .
 
