--- a/dispatcher/deploy.yaml
+++ b/dispatcher/deploy.yaml
@@ -1,35 +1,19 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: dispatcher-channel1
+  name: rabbitmq-consumer
   labels:
-    app: rabbit-dispatcher
-    channel: channel1
+    app: rabbitmq-consumer
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: rabbit-dispatcher
-      channel: channel1
+      app: rabbitmq-consumer
   template:
     metadata:
       labels:
-        app: rabbit-dispatcher
-        channel: channel1
+        app: rabbitmq-consumer
     spec:
       containers:
-        - name: dispatcher
-          image: fabiocalt/dispatcher:latest
-          args: ["channel1"]   # pass the channel as argument
-          env:
-            - name: RABBITMQ_URL
-              value: "amqp://myuser:mypassword@my-rabbitmq:5672/"
-          # Optional resource requests/limits:
-          resources:
-            requests:
-              memory: "128Mi"
-              cpu: "100m"
-            limits:
-              memory: "256Mi"
-              cpu: "250m"
-
+      - name: consumer
+        image: fabiocalt/dispatcher:latest
