--- a/trigger/Dockerfile
+++ b/trigger/Dockerfile
@@ -2,8 +2,9 @@ FROM python:3.11-slim
 
 WORKDIR /app
 COPY trigger.py .
+COPY requirements.txt .
 
-RUN pip install requests
+RUN pip install -r requirements.txt 
 
 EXPOSE 8080
 
