--- a/dispatcher/deploy.yaml
+++ b/dispatcher/deploy.yaml
@@ -1,18 +1,18 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: rabbitmq-consumer
+  name: dispatcher 
   labels:
-    app: rabbitmq-consumer
+    app: dispatcher
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: rabbitmq-consumer
+      app: dispatcher
   template:
     metadata:
       labels:
-        app: rabbitmq-consumer
+        app: dispatcher
     spec:
       containers:
       - name: consumer
