--- a/controller/deploy.yaml
+++ b/controller/deploy.yaml
@@ -17,6 +17,9 @@ spec:
         image: fabiocalt/controller:latest
         ports:
         - containerPort: 8000
+        env:
+        - name: NUM_CHANNEL
+          value: "3"
 ---
 apiVersion: v1
 kind: Service
